Yeonda 프로젝트 업로드

--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
 						</div>
         </h2>
 
-				<a href="#" class="scroll_text">
+		<a href="#down" class="scroll_text">
             scroll down
         </a>
 			</div>
 		</section>
 
 		<div class="contents">
-			<article class="article_hello">
+			<article class="article_hello" id="down">
 				<div class="inner">
 					<h2 class="title" data-ani="Hello.">
                Hello.
