--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
 					<div class="hello_text">
 						<img src="images/jongseok.png" alt="일러스트 이미지">
 						<p class="ly_mt_sm">
-							안녕하세요 신입 웹퍼블리셔 개발자 이종석입니다.
+							안녕하세요 신입 개발자 이종석입니다.
 						</p>
 					</div>
 					<div class="more">
 						<a href="about.html" class="more_link">
-                    <span class="more_link_text">웹 퍼블리셔 '이종석'에 대해 더 궁금하신가요?</span>
+                    <span class="more_link_text">개발자 '이종석'에 대해 더 궁금하신가요?</span>
                     <span class="icon_circle"></span>
                 </a>
 					</div>
