--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
 									안녕하세요, '이종석' 입니다! <br/> 어바웃미 페이지까지 오시다니 탁월한 클릭을 하셨습니다.<br/>
 								</p>
 								<p class="about_text_para">
-									좋아하는 일을 하면 즐기게 되고, 그 결과 잘하게 된다고 생각합니다. <br class="br_pc" /> 그래서 저는 웹퍼블리셔 일을 시작했고 오늘도 즐기고 있습니다.
+									좋아하는 일을 하면 즐기게 되고, 그 결과 잘하게 된다고 생각합니다. <br class="br_pc" /> 그래서 저는 개발자 일을 시작했고 오늘도 즐기고 있습니다.
 								</p>
 								<p class="about_text_para">
 									신입의 열정을 잊지 않고 끊임없이 배우는 한편, <br class="br_pc" /> 프로의 의식을 지니며 세세한 곳까지 고려하는 개발자입니다. <br class="br_pc" /> 제 작업물이 마음에 드셨다면 언제든 연락 주세요.
@@ -86,7 +86,7 @@
 									<li><strong>생년월일</strong></li>
 									<li>1998년 05월 11일</li>		
 									<li><strong>주소</strong></li>
-									<li>서울특별시 동작구 신대방동 338-7</li>		
+									<li>인천광역시 남동구 만수6동</li>		
 								</ul>
 								<strong class="about_text_accent">
 									학력
@@ -116,6 +116,8 @@
 									프로젝트 / 대외활동 / 교육이수
 							 	</strong>
 								 <ul class="about_text_para">
+									<li><strong>프로그래머스 웹 풀스택 데브코스 1기</strong></li>
+									<li>2023.11 ~ 2024.05</li>
 									<li><strong>스마트웹&콘텐츠서비스개발(스마트앱,웹콘텐츠디자인)양성훈련과정</strong></li>
 									<li>2017.09 ~ 2018.03</li>
 									<li>GUI 디자인, UI/UX, 웹접근성, 웹표준, HTML, CSS, 포토샵, 일러스트</li>
@@ -134,33 +136,18 @@
 									자격증
 							 	</strong>
 								 <ul class="about_text_para">
-									<li><strong>정보처리산업기사</strong></li>
-									<li><strong>정보기기운용기능사</strong></li>
+									<li><strong>정보처리산업기사</strong></li>									
 									<li><strong>웹디자인기능사</strong></li>
 									<li><strong>GTQ 포토샵 1급</strong></li>
 									<li><strong>GTQ 일러스트 1급</strong></li>
 									<li><strong>워드프로세서 1급</strong></li>
-									<li><strong>컴퓨터그래픽스운용기능사</strong></li>
-									<li><strong>통신선로기능사</strong></li>
-									<li><strong>컴퓨터활용능력 1급(필기합격)</strong></li>
-								</ul>
+									<li><strong>컴퓨터그래픽스운용기능사</strong></li>								
+								</ul>							
 								<strong class="about_text_accent">
-									보유기술
+									개발 블로그
 							 	</strong>
 								 <ul class="about_text_para">
-									<li><strong>SPA, React, Node, jQuery</strong></li>
-									<li><strong>HTML5, CSS3, JAVASCRIPT, C언어</strong></li>
-									<li><strong>웹 표준, 반응형 웹, 웹 접근성</strong> </li>							
-									<li><strong>Gitgub, Npm, Visual Studio Code</strong></li>
-									<li><strong>MS-Excel, MS-Word</strong></li>
-									<li><strong>Photoshop, Illustrator</strong> </li>
-									<li><strong>Firebase(Hosting, Functions)</strong> </li>
-								</ul>
-								<strong class="about_text_accent">
-									이력서 PDF 파일
-							 	</strong>
-								 <ul class="about_text_para">
-									<li><a href="https://han.gl/8cBku" target="_blank"><strong>https://han.gl/8cBku</strong></a></li>
+									<li><a href="https://lee-js.tistory.com/" target="_blank"><strong>https://lee-js.tistory.com/</strong></a></li>
 								</ul>
 							</div>
 							<!-- //about_text -->
