--- a/work/work_09.html
+++ b/work/work_09.html
@@ -92,7 +92,7 @@
 			<section class="hero topArea">
 				<div class="inner">
 					<h2 class="hero_title">
-					Gabia
+					CD Player
                     <i class="hero_title_sm">
                         <span class="text_hide_m">featured</span> work #3
                     </i>
@@ -103,7 +103,7 @@
 								#개요
 							</li>
 							<p>
-								가비아 사이트를 구현하였습니다
+								CD Player를 제작했습니다.
 							</p>
 							<li class="subject">
 								#특징
@@ -112,18 +112,18 @@
 								반응형 제작
 							</p>
 							<p>
-								배너 및 이미지 좌우 슬라이드 구현
+								재생하는 곡에 따라 배경색이 바뀜
 							</p>
 							<li class="subject">
 								#활용 라이브러리 & API
 							</li>
 							<p>
-								HTML, CSS, JAVASCRIPT
+								HTML, CSS, JAVASCRIPT, SCSS
 							</p>	
 						</ul>
 					</div>
 					<div class="hero_center">
-						<a href="https://dev-lee-js.github.io/gabia-clone/" target="_blank" class="hero_link btn_effect"><span>VIEW SITE</span></a>
+						<a href="https://dev-lee-js.github.io/cd-player/" target="_blank" class="hero_link btn_effect"><span>VIEW SITE</span></a>
 					</div>
 					<div class="hero_bottom">
 						<p class="hero_page"><span class="text_hide">Current Page:</span><i class="hash">&#x23;</i><span class="page_current">03</span></p>
