--- a/work/work_10.html
+++ b/work/work_10.html
@@ -84,7 +84,7 @@
 
 <body>
 
-	<div class="wrap work work_10">
+	<div class="wrap work work_11">
 
 		<header class="header"></header>
 
@@ -92,7 +92,7 @@
 			<section class="hero topArea">
 				<div class="inner">
 					<h2 class="hero_title">
-					Kakao Talk
+					M E G A B O X
                     <i class="hero_title_sm">
                         <span class="text_hide_m">featured</span> work #4
                     </i>
@@ -103,27 +103,27 @@
 								#개요
 							</li>
 							<p>
-								카카오톡을 구현하였습니다
+								메가박스 사이트를 구현하였습니다
 							</p>
 							<li class="subject">
 								#특징
 							</li>
 							<p>
-								Media query를 활용하여 사용자 화면 크기 제한
+								반응형 제작
 							</p>
 							<p>
-								transition/animation을 활용하여 Splash 화면 구현
+								배너 및 이미지 좌우 슬라이드 구현
 							</p>
 							<li class="subject">
 								#활용 라이브러리 & API
 							</li>
 							<p>
-								HTML5, CSS3, Javascript
+								HTML, CSS, Javascript
 							</p>	
 						</ul>
 					</div>
 					<div class="hero_center">
-						<a href="https://dev-lee-js.github.io/kakao-clone" target="_blank" class="hero_link btn_effect"><span>VIEW SITE</span></a>
+						<a href="https://dev-lee-js.github.io/Megabox-clone/" target="_blank" class="hero_link btn_effect"><span>VIEW SITE</span></a>
 					</div>
 					<div class="hero_bottom">
 						<p class="hero_page"><span class="text_hide">Current Page:</span><i class="hash">&#x23;</i><span class="page_current">04</span></p>
